# fastapi-kafka-redis

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cache.py  config.py  db.py  errors.py  idempotency.py  logging_config.py  main.py  models.py  processing.py  redis_client.py  repository.py  schemas.py  service.py  worker.py
app/api/: routes.py
app/kafka/: __init__.py  admin.py  consumers.py  headers.py  producer.py
docs/: ARCHITECTURE.md
scripts/: demo.sh
tests/: conftest.py  test_api.py  test_cache.py  test_headers.py  test_idempotency.py  test_processing.py
